omnibook (2:2.20070211+svn20090714-1) unstable; urgency=low

  * New SVN snapshot:
    + Applied patches from Azael Avalos <coproscefalo@gmail.com>
    to add support to Satellite X205 and other laptops based on
    ICH8
  * New Standards version 3.8.2
  * Bumped DH compat to 7
  * Updated copyright information

 -- Julien Valroff <julien@kirya.net>  Tue, 14 Jul 2009 09:56:01 +0200

omnibook (2:2.20070211+svn20090227-1) unstable; urgency=low

  * New SVN snapshot
    + Applied patch from Danny Kukawka <dkukawka@suse.de> to
    fix compiler warning about use uninitialized variable
    + Applied patch from Danny Kukawka <dkukawka@suse.de> to
    fix build the driver on older kernel versions

  * New Standards version 3.8.0 - no further changes needed
  * Updated copryight information

 -- Julien Valroff <julien@kirya.net>  Fri, 27 Feb 2009 19:57:35 +0100

omnibook (2:2.20070211+svn20071217-1) unstable; urgency=low

  * New SVN snapshot (r271)
  * Added amd64 as a compatible architecture for the module
  * New Standards version 3.7.3 - no further changes needed

 -- Julien Valroff <julien@kirya.net>  Mon, 17 Dec 2007 18:00:29 +0100

omnibook (2:2.20070211+svn20071006-1) unstable; urgency=low

  * New SVN snapshot (r264):
    + Update for acpi and backlight API changes in linux 2.6.23
  * First upload to Debian (Closes: #445602):
    + Improved debian/copyright
    + Bumped debhelper compat to version 5
    + Added myself as maintainer
    + Updated README.Debian
  * debian/control:
    + Moved Homepage to own field (from pseudo-field in long description)
    + Added Vcs-* fields

 -- Julien Valroff <julien@kirya.net>  Thu, 29 Nov 2007 18:30:27 +0100

omnibook (2:2.20070211+svn20070905-1) unstable; urgency=low

  * Added dependency on dpatch
  * [debian/rules]:
    - Fixed lintian warning in the clean target

 -- Julien Valroff <julien@kirya.net>  Wed, 05 Sep 2007 20:25:13 +0200

omnibook (2:2.20070211+svn20070526-1) unstable; urgency=low

  * New SVN snapshot (r259):