@@ -2,7 +2,7 @@ Source: omnibook
 Section: misc
 Priority: optional
 Maintainer: Julien Valroff <julien@kirya.net>
-Build-Depends: debhelper (>> 5.0.0), dpatch, bzip2
+Build-Depends: debhelper (>> 7.0.0), dpatch, bzip2
 Standards-Version: 3.8.2
 Homepage: http://omnibook.sf.net
 Vcs-Svn: https://omnibook.svn.sourceforge.net/svnroot/omnibook/omnibook/trunk
