@@ -54,7 +54,7 @@ install: DH_OPTIONS=
 install: patch build
 	dh_testdir
 	dh_testroot
-	dh_clean -k
+	dh_prep
 	dh_installdirs
 
 	# Create the directories to install the source into
@@ -111,7 +111,7 @@ kdist_config: prep-deb-files
 
 binary-modules: kdist_config prep-deb-files
 	dh_testroot
-	dh_clean -k
+	dh_prep
 	dh_installdirs lib/modules/$(KVERS)/extra
 
 	# Build the module
@@ -129,7 +129,7 @@ binary-modules: kdist_config prep-deb-files
 	dh_gencontrol -- -v$(VERSION)
 	dh_md5sums
 	dh_builddeb --destdir=$(DEB_DESTDIR)
-	dh_clean -k
+	dh_prep
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install configure binary-modules kdist kdist_config kdist_image kdist_clean
